# YellowCore

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/tests/: CMakeLists.txt
scripts/: demo_tcp.py
server/: CMakeLists.txt
server/src/: auth_service.cpp  auth_service.hpp  bank_service.cpp  bank_service.hpp  command_dispatcher.cpp  command_dispatcher.hpp  concurrent_map.hpp  models.hpp  price_engine.cpp  price_engine.hpp  server_main.cpp  stock_service.cpp  stock_service.hpp  tcp_framing.hpp  tcp_server.cpp  tcp_server.hpp  tcp_session.cpp  tcp_session.hpp
server/tests/: CMakeLists.txt  auth_tests.cpp  bank_tests.cpp  concurrent_tests.cpp  network_tests.cpp  stock_tests.cpp
shared/: protocol.hpp
